--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,18 +4,46 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <path
-      android:pathData="M0,0h108v108h-108z">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startX="54"
-          android:startY="0"
-          android:endX="54"
-          android:endY="108"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF18AEFF"/>
-        <item android:offset="1" android:color="#FF0165E2"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+  <group>
+    <clip-path
+        android:pathData="M0,0h108v108h-108z"/>
+    <path
+        android:pathData="M0,0h108v108h-108z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="15"
+            android:startY="12"
+            android:endX="58"
+            android:endY="73"
+            android:type="linear">
+          <item android:offset="0.25" android:color="#FF8530F1"/>
+          <item android:offset="0.53" android:color="#FFC92BB7"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M0,0h108v108h-108z"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M0,0h108v108h-108z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:centerX="45"
+            android:centerY="88"
+            android:gradientRadius="108.23"
+            android:type="radial">
+          <item android:offset="0.1" android:color="#FFFCC400"/>
+          <item android:offset="0.3" android:color="#FFF73344"/>
+          <item android:offset="0.57" android:color="#00F73344"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M0,0h108v108h-108z"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"/>
+  </group>
 </vector>
